WebApp port hardcoded. Readme updated.

--- a/GreatPizzaTest_WebApp/GreatPizza.WebApp/GreatPizza.WebApp.csproj
+++ b/GreatPizzaTest_WebApp/GreatPizza.WebApp/GreatPizza.WebApp.csproj
@@ -109,6 +109,8 @@
           <DevelopmentServerPort>64095</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:64095/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:64095/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
